# discord-sdk-conan

./: CMakeLists.txt  README.md  conandata.yml  conanfile.py
.github/workflows/: conan-package.yml
